--- a/templates/Sergioct Kotlin.xml
+++ b/templates/Sergioct Kotlin.xml
@@ -13,8 +13,20 @@
       <option name="KOTLIN" value="true" />
     </context>
   </template>
-  <template name="testClass" value="package $package$&#10;&#10;import es.tcg.punchinapp.BaseTest&#10;import io.mockk.verify&#10;&#10;class HistoryTestTest : BaseTest() {&#10;&#9;init {&#10;&#9;&#9;//val mView = mockk&lt;SplashView&gt;()&#10;&#10;&#9;&#9;Given(&quot;&quot;) {&#10;&#9;&#9;&#9;When(&quot;&quot;) {&#10;&#9;&#9;&#9;&#9;Then(&quot;&quot;) {&#10;&#9;&#9;&#9;&#9;&#9;verify(exactly = 1) {&#10;&#10;&#9;&#9;&#9;&#9;&#9;}&#10;&#9;&#9;&#9;&#9;&#9;verify(exactly = 0) {&#10;&#10;&#9;&#9;&#9;&#9;&#9;}&#10;&#9;&#9;&#9;&#9;}&#10;&#9;&#9;&#9;}&#10;&#9;&#9;}&#10;&#9;}&#10;}" description="Test Class" toReformat="true" toShortenFQNames="true">
+  <template name="testBehaviorClass" value="package $package$&#10;&#10;import io.kotlintest.IsolationMode&#10;import io.kotlintest.specs.BehaviorSpec&#10;import io.mockk.*&#10;import io.reactivex.Completable&#10;import io.reactivex.Single&#10;import kotlinx.coroutines.Dispatchers&#10;import kotlinx.coroutines.delay&#10;import kotlinx.coroutines.newSingleThreadContext&#10;import kotlinx.coroutines.test.setMain&#10;&#10;class $test$Test : BehaviorSpec() {&#10;&#10;    val mainThreadSurrogate = newSingleThreadContext(&quot;Main thread&quot;)&#10;&#9;override fun isolationMode(): IsolationMode = IsolationMode.InstancePerLeaf&#10;&#10;&#9;override fun beforeSpec(spec: Spec) {&#10;&#9;&#9;super.beforeSpec(spec)&#10;&#9;&#9;Dispatchers.setMain(mainThreadSurrogate)&#10;&#9;}&#10;&#10;&#9;override fun afterSpec(spec: Spec) {&#10;&#9;&#9;super.afterSpec(spec)&#10;&#9;&#9;mainThreadSurrogate.close()&#10;&#9;}&#10;&#10;    init {&#10;        //val mView = mockk&lt;SplashView&gt;()       &#10;&#10;        Given(&quot;$given$&quot;) {&#10;            When(&quot;$when$&quot;) {&#10;                Then(&quot;$then$&quot;){&#10;                    verify(exactly = 1) {&#10;&#10;&#9;&#9;&#9;&#9;&#9;}&#10;&#9;&#9;&#9;&#9;&#9;verify(exactly = 0) {&#10;&#10;&#9;&#9;&#9;&#9;&#9;}&#10;                }&#10;            }&#10;        }&#10;    }&#10;&#10;}" description="BehaviorSpec" toReformat="true" toShortenFQNames="true">
     <variable name="package" expression="kotlinPackageName()" defaultValue="" alwaysStopAt="true" />
+    <variable name="test" expression="fileNameWithoutExtension()" defaultValue="" alwaysStopAt="true" />
+    <variable name="given" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="when" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="then" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="KOTLIN" value="true" />
+    </context>
+  </template>
+  <template name="testBehavior" value="Given(&quot;$given$&quot;) {&#10;    When(&quot;$when$&quot;) {&#10;        Then(&quot;$then$&quot;){&#10;            verify(exactly = 1) {&#10;&#10;            }&#10;            verify(exactly = 0) {&#10;        &#10;            }&#10;        }&#10;    }&#10;}" description="Behavior test" toReformat="true" toShortenFQNames="true">
+    <variable name="given" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="when" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="then" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="KOTLIN" value="true" />
     </context>
@@ -107,11 +119,6 @@
     <variable name="activity" expression="kotlinClassName()" defaultValue="activity" alwaysStopAt="true" />
     <variable name="method" expression="" defaultValue="method" alwaysStopAt="true" />
     <variable name="name" expression="" defaultValue="name" alwaysStopAt="true" />
-    <context>
-      <option name="KOTLIN" value="true" />
-    </context>
-  </template>
-  <template name="loadObservers" value="private fun loadObservers(){&#10;    vModel.showServicesGroupObs.observe(this, EventObserver {&#10;        showSpecialtyListView()&#10;    })&#10;}" description="Load Observers method" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="KOTLIN" value="true" />
     </context>
